fix(popup): fixed close button position for popup images on small resolutions

--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -20,7 +20,7 @@
   .popup__button-close {
     width: 26px;
     height: 26px;
-    top: -39.62px;
+    top: -39.23px;
     right: 0;
   }
 }
