--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,16 +2,6 @@
   position: relative;
   background-color: transparent;
   color: #000000;
-  /* width: 430px; */
-  /*   max-width: 90vw;
-  max-height: 70vh; */
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
 }
-
-/* @media screen and (max-width: 614px) {
-  .popup__container {
-    width: 282px;
-  }
-} */
